fix(components): fix popover alignment styles 👍
Fixes alignment of the popover content for direction left popovers without content that fills the
max-width. Also includes cleaned up styles for creating popover tips.

--- a/demo/styles/theme.scss
+++ b/demo/styles/theme.scss
@@ -87,6 +87,7 @@ $tooltip-arrow-height: 8px;
 // Popovers
 
 $popover-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
+$popover-arrow-width: 11px;
 
 // Modals
 // ---------------------------------------------------------------------------
